# hygge

./: .gitignore  README.md
.github/workflows/: rust.yaml
backend/: .env  Cargo.toml
backend/arena/src/: lib.rs
backend/auth/: Cargo.toml
backend/auth/src/: authentication.rs  authentication_error.rs  lib.rs
backend/auth/src/io/: account.rs  token.rs
backend/axum_tx_layer/src/: lazy.rs  lease.rs
backend/axum_tx_layer/src/layers/: redis.rs
backend/can_do/src/: error.rs  lib.rs
backend/main/: Cargo.toml
backend/main/.sqlx/: query-558449b4a32591c99486f169701f24dd9c8cfa6b21dbe6c7a1f362806c28fe61.json  query-8b36c94234b316bdab0a39a4d0317a9394672c8b8a9666301327a0e76ee278b1.json  query-96ef742dcf4d78dfb8aae44f5c6e79898d600b0928d77e9cbc34290d7dfb3002.json  query-99fe3b44a62a39dd033be2c88065b3470074c37e8263053b9af913168ea3d155.json  query-d70d22310b4fa0ba1c2d1ac20ff03bfd35fba74ae1956d97aa45a0b599713dfb.json
backend/main/api_test/: auth.hurl
backend/main/api_test/auth/: create_account.hurl  login.hurl
backend/main/migrations/: 20230423155203_add_user_auth_table.sql
backend/main/src/: main.rs
backend/main/src/helper/: mod.rs
backend/main/src/services/auth/: account.rs  account_provider.rs  client.rs  error.rs  mod.rs  token_provider.rs
backend/main/src/services/auth/io/: account.rs  mod.rs  token.rs
backend/main/src/services/auth/io_provider/: account.rs  token.rs
backend/main/src/types/: mod.rs
backend/main/src/web/: auth_layer.rs  auth_router.rs  mod.rs
backend/permission/src/: io.rs  lr.rs  types.rs
dev/: .env  compose_up  dir  docker-compose.yml  install  sqlx
dev/git_hooks/: pre-commit
docs/: Offene Fragen.md
docs/Architecture/Core/: Authentifizierung.md  Ids.md  Permission.md  User Management.md
docs/Membear/: Features.md  Pitch.md
docs/technical/: CanIDo.md  Sans IO.md  Services und Clients.md  scoped vs manual context.md
migrations/: 20230423155200_updated_trigger.sql  20230423155203_add_user_auth_table.sql
src/: Cargo.toml
src/arena/src/: lib.rs
src/auth/: Cargo.toml
src/auth/src/: account.rs  lib.rs  (+5 more)
src/axum_tx_layer/: Cargo.toml
src/axum_tx_layer/src/: lib.rs  slot.rs
src/axum_tx_layer/src/layers/: redis.rs  sqlx.rs
src/can_do/: Cargo.toml
src/main/: Cargo.toml  drill.yaml
src/main/.sqlx/: query-046cf42bc0782345c316a3134fff5ab864ce14d364c4da8d67646c2368bea2b2.json  query-89e1c358977f21d7e68af70cf8fe82651949ed998bfaffec63ad0ad95ecd1f97.json  query-9d4aa55c653f28784eb446e12ab1d786c97f818881a129f1e1947695e21bfc0a.json  query-a6f9d24540eec2deaa5ffeda795af31ca4b859b4f4fa9b7f2d2650afc515f896.json  query-d8031446232d7a0be71ca1230ebb12142bf6addd516d694c924521566c32ddd9.json  query-ff5cdf2c1771fd9421dcfcedf353039437338e452ece708a469db293affd97a1.json
src/main/migrations/: 20230423155200_updated_trigger.sql  20230423155203_add_user_auth_table.sql
src/main/src/: main.rs
src/main/src/auth/: account.rs  account_provider.rs  login_token_provider.rs  mod.rs
src/main/src/helper/: mod.rs  redis_pool.rs
src/main/src/services/auth/: account.rs  account_provider.rs  login_token.rs  login_token_provider.rs  mod.rs  permission.rs
src/main/src/types/: mod.rs
src/main/src/web/: auth_router.rs  extractors.rs  mod.rs
src/main/tests/: quick-dev.rs
src/permission/: Cargo.toml
(+14 files in other folders)
