[workspace]
resolver = "2"
members = [
    "arena",
    "auth",
    "can_do",
    "main",
    "permission",
    "axum_tx_layer"
]

[workspace.dependencies]
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.12", features = ['macros'] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "macros", "uuid", "time"] }
redis = { version = "0.23.0", features = ["connection-manager", "tokio-native-tls-comp", "r2d2"] }
uuid = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#dev dependencies
mockall = "0.11.4"