[package]
name = "axum_tx_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ['macros'] }
tokio = { workspace = true }
parking_lot = "0.12.1"
redis = { workspace = true, features = ["aio", "tokio"] }
deadpool-redis = "0.12.0"
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }