[package]
name = "hygge"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "macros", "uuid", "time"] }
argon2 = "0.5.0"
axum = { workspace = true, features = ['macros'] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
auth = { path = "../auth" }
redis = { workspace = true, features = ["aio", "tokio", "connection-manager"] }
deadpool-redis = "0.12.0"
axum_tx_layer =  { path = "../axum_tx_layer" }
